Ajout du copyright dans le footer

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 					<img src="images/paper-plane.svg" alt="">
 					Envoyer</button>
 			</form>
+			<p>&copy;Kevin BERTAUX - 2021</p>
 		</div>
 	</footer>
 
