--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 	Kevin BERTAUX - Supper App 2021
 	Création		10/06/2021
-	Modification	15/06/2021
+	Modification	18/06/2021
 -->
 
 <!DOCTYPE html>
@@ -11,7 +11,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="images/favicon.png">
+	<link rel="icon" type="image/png" href="img/favicon.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/helpers.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -22,7 +22,7 @@
 	<header class="site-header">
 		<div class="container">
 			<div class="logo">
-				<img src="images/logo.png" alt="Logo de SuperApp">
+				<img src="img/logo.png" alt="Logo de SuperApp">
 			</div>
 			<nav class="main-nav">
 				<button class="toggle-menu" aria-expanded="false" aria-controls="menu">Menu</button>
@@ -52,16 +52,13 @@
 				<hr class="separator">
 				<ul class="cta-list" role="list">
 					<li class="cta-item">
-						<a href="#" class="cta-link btn"><img src="images/thumbs-up.svg" alt="Un pouce en l'air">Like
-							it</a>
+						<a href="#" class="cta-link btn"><img src="img/thumbs-up.svg" alt="Un pouce en l'air">Like it</a>
 					</li>
 					<li class="cta-item">
-						<a href="#" class="cta-link btn"><img src="images/heart-shape-silhouette.svg"
-								alt="Un coeur">Love it</a>
+						<a href="#" class="cta-link btn"><img src="img/heart.svg" alt="Un coeur">Love it</a>
 					</li>
 					<li class="cta-item">
-						<a href="#" class="cta-link btn"><img src="images/shopping-cart-black-shape.svg"
-								alt="Un chariot de supermarché">Buy it</a>
+						<a href="#" class="cta-link btn"><img src="img/shopping-cart.svg" alt="Un chariot de supermarché">Buy it</a>
 					</li>
 				</ul>
 			</div>
@@ -73,53 +70,53 @@
 				<ul class="service-list" role="list">
 					<li class="service-item">
 						<figure class="service-figure">
-							<img src="images/fork-and-knife-silhouette.svg" alt="Une fourchette et un couteau"
+							<img src="img/fork-and-knife.svg" alt="Une fourchette et un couteau"
 								class="service-img">
 						</figure>
 						<h3 class="service-title">Mettre la table</h3>
 						<p class="service-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
-                            corporis beatae odit quaerat officiis perferendis!</p>
+                            corporis beatae odit quaerat officiis perferendis.</p>
 					</li>
 					<li class="service-item">
 						<figure class="service-figure">
-							<img src="images/bed.svg" alt="Un lit" class="service-img">
+							<img src="img/bed.svg" alt="Un lit" class="service-img">
 						</figure>
 						<h3 class="service-title">Faire le lit</h3>
 						<p class="service-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
-                            corporis beatae odit quaerat officiis perferendis!</p>
+                            corporis beatae odit quaerat officiis perferendis.</p>
 					</li>
 					<li class="service-item">
 						<figure class="service-figure">
-							<img src="images/fire-symbol.svg" alt="Un feu de bois" class="service-img">
+							<img src="img/fire.svg" alt="Un feu de bois" class="service-img">
 						</figure>
 						<h3 class="service-title">Allumer le feu</h3>
 						<p class="service-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
-                            corporis beatae odit quaerat officiis perferendis!</p>
+                            corporis beatae odit quaerat officiis perferendis.</p>
 					</li>
 					<li class="service-item">
 						<figure class="service-figure">
-							<img src="images/plant-leaf-with-white-details.svg" alt="Une feuille d'arbre"
+							<img src="img/leaf.svg" alt="Une feuille d'arbre"
 								class="service-img">
 						</figure>
 						<h3 class="service-title">Ramasser les feuilles</h3>
 						<p class="service-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
-                            corporis beatae odit quaerat officiis perferendis!</p>
+                            corporis beatae odit quaerat officiis perferendis.</p>
 					</li>
 					<li class="service-item">
 						<figure class="service-figure">
-							<img src="images/umbrella-black-silhouette.svg" alt="Un parapluie" class="service-img">
+							<img src="img/umbrella.svg" alt="Un parapluie" class="service-img">
 						</figure>
-						<h3 class="service-title">Proéger de la pluie</h3>
+						<h3 class="service-title">Protéger de la pluie</h3>
 						<p class="service-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
-                            corporis beatae odit quaerat officiis perferendis!</p>
+                            corporis beatae odit quaerat officiis perferendis.</p>
 					</li>
 					<li class="service-item">
 						<figure class="service-figure">
-							<img src="images/dollar-symbol.svg" alt="Le symbole dollar" class="service-img">
+							<img src="img/dollar.svg" alt="Le symbole dollar" class="service-img">
 						</figure>
 						<h3 class="service-title">Vider votre compte</h3>
 						<p class="service-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
-                            corporis beatae odit quaerat officiis perferendis!</p>
+                            corporis beatae odit quaerat officiis perferendis.</p>
 					</li>
 				</ul>
 			</div>
@@ -134,34 +131,34 @@
 			<div class="container">
 				<ul class="member-list" role="list">
 					<li class="member-item">
-						<img src="images/avaone.jpg.png" srcset="images/avaone.jpg@2x.png 2x"
+						<img src="img/ava1.png" srcset="img/ava1@2x.png 2x"
 							alt="Portrait de Tex Talign" class="member-img">
 						<h3 class="member-title">Tex Talign</h3>
-						<a href="mailto:" class="member-link btn btn-secondary"><img src="images/envelope.svg"
+						<a href="mailto:" class="member-link btn btn-secondary"><img src="img/envelope.svg"
 								alt="Une envelope"> Lui
 							écrire</a>
 					</li>
 					<li class="member-item">
-						<img src="images/avatwo.jpg.png" srcset="images/avatwo.jpg@2x.png 2x"
+						<img src="img/ava2.png" srcset="img/ava2@2x.png 2x"
 							alt="Portrait de Marge Inn" class="member-img">
 						<h3 class="member-title">Marge Inn</h3>
-						<a href="mailto:" class="member-link btn btn-secondary"><img src="images/envelope.svg"
+						<a href="mailto:" class="member-link btn btn-secondary"><img src="img/envelope.svg"
 								alt="Une envelope"> Lui
 							écrire</a>
 					</li>
 					<li class="member-item">
-						<img src="images/avathree.jpg.png" srcset="images/avathree.jpg@2x.png 2x"
+						<img src="img/ava3.png" srcset="img/ava3@2x.png 2x"
 							alt="Portrait de Isaac Newton" class="member-img">
 						<h3 class="member-title">Isaac Newton</h3>
-						<a href="mailto:" class="member-link btn btn-secondary"><img src="images/envelope.svg"
+						<a href="mailto:" class="member-link btn btn-secondary"><img src="img/envelope.svg"
 								alt="Une envelope"> Lui
 							écrire</a>
 					</li>
 					<li class="member-item">
-						<img src="images/avafour.jpg.png" srcset="images/avafour.jpg@2x.png 2x"
+						<img src="img/ava4.png" srcset="img/ava4@2x.png 2x"
 							alt="Portrait de Ash Tehemel" class="member-img">
 						<h3 class="member-title">Ash Tehemel</h3>
-						<a href="mailto:" class="member-link btn btn-secondary"><img src="images/envelope.svg"
+						<a href="mailto:" class="member-link btn btn-secondary"><img src="img/envelope.svg"
 								alt="Une envelope"> Lui écrire</a>
 					</li>
 				</ul>
@@ -186,10 +183,10 @@
 					<textarea name="msg" id="msg" required></textarea>
 				</div>
 				<button class="btn btn-tertiary grid-cell-full-width">
-					<img src="images/paper-plane.svg" alt="">
+					<img src="img/paper-plane.svg" alt="">
 					Envoyer</button>
 			</form>
-			<p>&copy;Kevin BERTAUX - 2021</p>
+			<p class="copyright"><a href="https://github.com/KevinBertaux" target="_blank">Kevin BERTAUX</a> - DWWM 2021</p>
 		</div>
 	</footer>
 
